@@ -1,3 +1,12 @@
+2011-01-21 Pierre Wieser <pwieser@trychlos.org>
+
+	* src/nact/base-application.c:
+	* src/nact/base-application.h:
+	Define new 'base-application-description' property.
+
+	* src/nact/nact-application.c (nact_application_new):
+	Make use of the new property at instanciation time.
+
 2011-01-20 Pierre Wieser <pwieser@trychlos.org>
 
 	* src/nact/base-window.c:
